GeneticAlg/GeneticAlg/x64/Debug/GeneticAlg.log
  Compiling CUDA source file kernel.cu...
  
  C:\Users\faith\Documents\A_my_documents\Student\HPC\GeneticAlg\GeneticAlg>"C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v13.1\bin\nvcc.exe" -gencode=arch=compute_75,code=\"sm_75,compute_75\" --use-local-env -ccbin "C:\Program Files (x86)\Microsoft Visual Studio\2019\Community\VC\Tools\MSVC\14.29.30133\bin\HostX86\x64" -x cu   -I"C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v13.1\include" -I"C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v13.1\include"  -G   --keep-dir x64\Debug  -maxrregcount=0    --machine 64 --compile -cudart hybrid -std=c++17 -Xcompiler "/std:c++17" -g  -DWIN32 -DWIN64 -D_DEBUG -D_CONSOLE -D_MBCS -Xcompiler "/EHsc /W3 /nologo /Od /FS /Zi /RTC1 /MDd " -Xcompiler "/Fdx64\Debug\vc142.pdb" -o C:\Users\faith\Documents\A_my_documents\Student\HPC\GeneticAlg\GeneticAlg\x64\Debug\kernel.cu.obj "C:\Users\faith\Documents\A_my_documents\Student\HPC\GeneticAlg\GeneticAlg\kernel.cu" 
C:\Users\faith\Documents\A_my_documents\Student\HPC\GeneticAlg\GeneticAlg\kernel.cu(268): error : calling a __device__ function("bits_to_coeff(const unsigned int *, int)") from a __host__ function("GeneticAlgorithm") is not allowed
            best_coefs[i] = bits_to_coeff(h_best[0].bits, i);  
                            ^
  
  1 error detected in the compilation of "C:/Users/faith/Documents/A_my_documents/Student/HPC/GeneticAlg/GeneticAlg/kernel.cu".
  kernel.cu
C:\Program Files (x86)\Microsoft Visual Studio\2019\Community\MSBuild\Microsoft\VC\v160\BuildCustomizations\CUDA 13.1.targets(803,9): error MSB3721: выход из команды ""C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v13.1\bin\nvcc.exe" -gencode=arch=compute_75,code=\"sm_75,compute_75\" --use-local-env -ccbin "C:\Program Files (x86)\Microsoft Visual Studio\2019\Community\VC\Tools\MSVC\14.29.30133\bin\HostX86\x64" -x cu   -I"C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v13.1\include" -I"C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v13.1\include"  -G   --keep-dir x64\Debug  -maxrregcount=0    --machine 64 --compile -cudart hybrid -std=c++17 -Xcompiler "/std:c++17" -g  -DWIN32 -DWIN64 -D_DEBUG -D_CONSOLE -D_MBCS -Xcompiler "/EHsc /W3 /nologo /Od /FS /Zi /RTC1 /MDd " -Xcompiler "/Fdx64\Debug\vc142.pdb" -o C:\Users\faith\Documents\A_my_documents\Student\HPC\GeneticAlg\GeneticAlg\x64\Debug\kernel.cu.obj "C:\Users\faith\Documents\A_my_documents\Student\HPC\GeneticAlg\GeneticAlg\kernel.cu"" с кодом "2".
